[project]
name = "cart-wheel"
version = "0.1.0"
description = "Convert Python wheels to conda packages"
requires-python = ">=3.10"
dependencies = [
    "zstandard>=0.21.0",
    "packaging>=25.0",
    "stream-unzip>=0.0.95",
]

[project.scripts]
cart-wheel = "cart_wheel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cart_wheel"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]
preview = ["pixi-build"]

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.4.*" }

[tool.pixi.package.host-dependencies]
hatchling = "*"

[tool.pixi.package.run-dependencies]
packaging = ">=25.0"
stream-unzip = ">=0.0.95"

[tool.pixi.dependencies]
cart-wheel = { path = "." }
stream-unzip = ">=0.0.95,<0.0.100"

[tool.pixi.tasks]
convert = "cart-wheel"

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.0"
ruff = "*"
stream-unzip = ">=0.0.95,<0.0.100"
pip = ">=25.3,<26"

[tool.pixi.feature.dev.tasks]
test = "pytest tests -v"
lint = "ruff check src tests"
format = "ruff format src tests"
fix = "ruff check --fix src tests"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["cart_wheel"]
